# solace-agent-mesh-core-plugins

./: .fossa.yml  .gitignore  .release-please-manifest.json  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PROCESS.md  pytest.ini  release-please-config.json  release-tag-format-findings.md  sonar-project.properties  starting-point-for-agents.aider
sam-a2a-client/: README.md  implementation-checklist.md  pyproject.toml  sam-a2a-client-architecture.md  sam-a2a-client-design.md  sam-a2a-client-implementation-plan.md  solace-agent-mesh-plugin.yaml
sam-a2a-client/configs/agents/: a2a_client.yaml  a2a_client_agent_config_template.yaml
sam-a2a-client/src/common_a2a/: NOTICE  types.py
sam-bedrock-agent/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-bedrock-agent/src/sam_bedrock_agent/: aws_session_manager.py  bedrock_agent.py  bedrock_agent_runtime.py  bedrock_flow.py  sam_bedrock_agent_llm.txt
sam-code-executor-tool/: README.md  config.yaml  pyproject.toml
sam-code-executor-tool/src/sam_code_executor_tool/: __init__.py  tools.py
sam-computer-use-tool/: README.md  config.yaml  pyproject.toml
sam-computer-use-tool/src/sam_computer_use_tool/: __init__.py  config.py  tools.py
sam-document-template/: README.md  pyproject.toml  solace-agent-mesh-plugin.yaml
sam-document-template/configs/agents/: document_structure.yaml
sam-event-mesh-agent/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-event-mesh-agent/src/sam_event_mesh_agent/: __init__.py  tools.py
sam-event-mesh-gateway/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-event-mesh-gateway/docs/: A2A-SDK-Migration-Checklist.md  A2A-SDK-Migration-Design.md  A2A-SDK-Migration-Implementation-Plan.md
sam-event-mesh-gateway/src/sam_event_mesh_gateway/: __init__.py  app.py  component.py  sam_event_mesh_gateway_llm.txt
sam-event-mesh-gateway/tests/: __init__.py  conftest.py
sam-event-mesh-gateway/tests/integration/: test_basic_functionality.py  test_deferred_ack_integration.py  test_gateway_message_handling.py  test_response_and_error_handling.py
sam-event-mesh-gateway/tests/templates/: integration_test_flow.yaml
sam-event-mesh-gateway/tests/unit/: __init__.py  conftest.py  test_data_plane_lifecycle.py  test_deferred_ack.py  test_identity_extraction.py  test_message_processing_loop.py  test_network_dev_broker.py  test_output_handling.py  test_response_handling.py  test_structured_invocation.py  test_translation.py
sam-event-mesh-identity-provider/: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties
sam-event-mesh-identity-provider/tests/: conftest.py
sam-event-mesh-identity-provider/tests/unit/: test_field_mapper.py  (+2 more)
sam-event-mesh-tool/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  implementation-checklist.md  pyproject.toml  sonar-project.properties  workflow-config.json
sam-event-mesh-tool/docs/: detailed-design.md  feature-proposal.md  implementation-checklist.md  test-design.md  test-implementation-plan.md
sam-event-mesh-tool/tests/: README.md  conftest.py  test_utils.py
sam-geo-information/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-mcp-server-gateway-adapter/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-mcp-server-gateway-adapter/tests/: __init__.py
sam-mermaid/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-mongodb/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-nuclia-agent/: README.md  config.yaml  pyproject.toml
sam-nuclia-agent/docs/: nuclia_rag_tool_feature_spec.md  nuclia_rag_tool_user_guide.md
sam-nuclia-tool/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-nuclia-tool/docs/: nuclia_rag_tool_user_guide.md
sam-powerbi/: .fossa.yml  README.md  config.yaml  pyproject.toml  sonar-project.properties
sam-rag/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  config_multi_cloud.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-rag/docs/: architecture.md  configuration.md  tools_and_lifecycle.md
sam-rest-gateway/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-rest-gateway/docs/: A2A-SDK-Migration-Checklist.md  A2A-SDK-Migration-Design.md  A2A-SDK-Migration-Implementation-Plan.md
sam-rest-gateway/tests/: README.md  __init__.py
sam-ruleset-lookup-tool/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-ruleset-lookup-tool/docs/: ruleset_lookup_tool_usage.md
sam-slack/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-slack-gateway-adapter/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-slack-gateway-adapter/tests/: __init__.py
sam-slack/docs/: A2A-SDK-Migration-Checklist.md  A2A-SDK-Migration-Design.md  A2A-SDK-Migration-Implementation-Plan.md
sam-sql-analytics-db-tool/: README.md  config.yaml  pyproject.toml
sam-sql-analytics-db-tool/docs/: historical-profiling-implementation-plan.md
sam-sql-database-tool/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-sql-database-tool/tests/: conftest.py  test_data.py
sam-webhook-gateway/: .fossa.yml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  sonar-project.properties  workflow-config.json
sam-webhook-gateway/docs/: A2A-SDK-Migration-Checklist.md  A2A-SDK-Migration-Design.md  A2A-SDK-Migration-Implementation-Plan.md
(+340 files in other folders)
