[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_bedrock_agent.metadata]
type = "agent"

[project]
name = "sam_bedrock_agent"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "This plugin allows you to import one or multiple Amazon bedrock agents or flows as action to be used in your SAM project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3~=1.34.122",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_bedrock_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_bedrock_agent" = "sam_bedrock_agent/"
"config.yaml" = "sam_bedrock_agent/config.yaml"
"README.md" = "sam_bedrock_agent/README.md"
"pyproject.toml" = "sam_bedrock_agent/pyproject.toml"
