[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_bedrock_agent.metadata]
type = "agent"

[project]
name = "sam_bedrock_agent"
version = "0.1.1"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "This plugin allows you to import one or multiple Amazon bedrock agents or flows as action to be used in your SAM project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.40.37",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_bedrock_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_bedrock_agent" = "sam_bedrock_agent/"
"config.yaml" = "sam_bedrock_agent/config.yaml"
"README.md" = "sam_bedrock_agent/README.md"
"pyproject.toml" = "sam_bedrock_agent/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
markers = []

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.5.0",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure"
]
