[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_computer_use_tool.metadata]
type = "tool"

[project]
name = "sam_computer_use_tool"
version = "0.1.0"
description = "A browser automation tool using Playwright for Solace Agent Mesh."
readme = "README.md"
authors = [
  { name = "SolaceLabs", email = "solacelabs@solace.com" },
]
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.40.0",
  "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sam_computer_use_tool"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_computer_use_tool" = "sam_computer_use_tool/"
"config.yaml" = "sam_computer_use_tool/config.yaml"
"README.md" = "sam_computer_use_tool/README.md"
"pyproject.toml" = "sam_computer_use_tool/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-playwright>=0.4.0",
  "solace-agent-mesh>=1.4.9,<2.0.0",
]
