[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam-document-template"
dynamic = ["version"]
authors = [
  { name="hugo.pare@solace.com", email="" },
]
description = "A plugin that generates instructions and a template for creating a standardized document with customizable sections."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_document_template/src"
"interfaces" = "sam_document_template/interfaces"
"configs" = "sam_document_template/configs"
"solace-agent-mesh-plugin.yaml" = "sam_document_template/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_document_template"]

[tool.hatch.version]
path = "src/__init__.py"

