[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_event_mesh_agent.metadata]
type = "agent"

[project]
name = "sam_event_mesh_agent"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "This agent sends a message into event mesh and subscribes for a response"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "solace_agent_mesh~=1.0.2",
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_event_mesh_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_event_mesh_agent" = "sam_event_mesh_agent/"
"config.yaml" = "sam_event_mesh_agent/config.yaml"
"README.md" = "sam_event_mesh_agent/README.md"
"pyproject.toml" = "sam_event_mesh_agent/pyproject.toml"
