[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_event_mesh_gateway.metadata]
type = "gateway"

[project]
name = "sam_event_mesh_gateway"
version = "1.0.0"
description = "Solace Agent Mesh Gateway plugin for integrating with Solace PubSub+ event brokers."
readme = "README.md"
authors = [
    { name="SolaceLabs", email="solacelabs@solace.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "solace-pubsubplus>=1.3.0" # For data plane client if used directly
]

[project.entry-points."solace_agent_mesh.plugins"]
sam_event_mesh_gateway = "sam_event_mesh_gateway.app:info"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_event_mesh_gateway"]

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "sam_event_mesh_gateway/config.yaml"
"README.md" = "sam_event_mesh_gateway/README.md"
"pyproject.toml" = "sam_event_mesh_gateway/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
markers = [
  "basic: marks tests as basic functionality tests",
  "event_mesh: marks tests as event mesh related",
  "integration: marks tests as integration tests",
  "declarative: marks tests as declarative scenario tests"
]

[tool.hatch.envs.hatch-test]
dependencies = [
  "a2a-sdk[http-server]>=0.3.1",
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.5.0",
  "solace-agent-mesh>=1.16.0",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure"
]
