[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_event_mesh_tool.metadata]
type = "tool"

[project]
name = "sam_event_mesh_tool"
version = "0.1.0"
authors = [
  { name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
]
description = "A tool to allow an agent to send requests to a Solace broker and wait for a reply. It can also be configured to send 'fire-and-forget' events to the broker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_event_mesh_tool"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "sam_event_mesh_tool/config.yaml"
"README.md" = "sam_event_mesh_tool/README.md"
"pyproject.toml" = "sam_event_mesh_tool/pyproject.toml"

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-json-ctrf>=0.1.0",
  "pytest-xdist>=3.5.0",
  "PyYAML>=6.0.2",
  "solace-agent-mesh>=1.0.6",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure",
]
