[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_geo_information.metadata]
type = "agent"

[project]
name = "sam_geo_information"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "A plugin that provides comprehensive geographic information services including location, timezone, and weather data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "timezonefinder>=6.2.0",
    "pytz>=2024.1",
    "pyyaml"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_geo_information"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_geo_information" = "sam_geo_information/"
"config.yaml" = "sam_geo_information/config.yaml"
"README.md" = "sam_geo_information/README.md"
"pyproject.toml" = "sam_geo_information/pyproject.toml"
