[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_mcp_server_gateway_adapter.metadata]
type = "gateway"

[project]
name = "sam_mcp_server_gateway_adapter"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "A gateway adapter to make SAM accessible as a MCP server"
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.10.16,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastmcp>=2.14.2",
    "starlette~=0.49.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-json-ctrf>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/SolaceLabs/solace-agent-mesh"
Documentation = "https://solacelabs.github.io/solace-agent-mesh/"
Repository = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins"
Issues = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_mcp_server_gateway_adapter"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "sam_mcp_server_gateway_adapter/config.yaml"
"README.md" = "sam_mcp_server_gateway_adapter/README.md"
"pyproject.toml" = "sam_mcp_server_gateway_adapter/pyproject.toml"


[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-json-ctrf>=0.1.0"
]
