[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_mermaid.metadata]
type = "agent"

[project]
name = "sam_mermaid"
version = "0.1.1"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "This plugin is used to generate visualizations using Mermaid.js"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/sam_mermaid"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_mermaid" = "sam_mermaid/"
"config.yaml" = "sam_mermaid/config.yaml"
"README.md" = "sam_mermaid/README.md"
"pyproject.toml" = "sam_mermaid/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
markers = []

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.5.0",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure"
]