[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_mongodb.metadata]
type = "agent"

[project]
name = "sam_mongodb"
version = "0.1.0"
description = "A Solace Agent Mesh plugin for natural language querying of MongoDB databases."
readme = "README.md"
authors = [
    { name="SolaceLabs", email="solacelabs@solace.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_mongodb"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_mongodb" = "sam_mongodb/"
"config.yaml" = "sam_mongodb/config.yaml"
"README.md" = "sam_mongodb/README.md"
"pyproject.toml" = "sam_mongodb/pyproject.toml"
