[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_nuclia_agent.metadata]
type = "agent"

[project]
name = "sam_nuclia_agent"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "A plugin for connecting to RAG and retrieving relevant documents from Nuclia"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nuclia==4.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_nuclia_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_nuclia_agent" = "sam_nuclia_agent/"
"config.yaml" = "sam_nuclia_agent/config.yaml"
"README.md" = "sam_nuclia_agent/README.md"
"pyproject.toml" = "sam_nuclia_agent/pyproject.toml"
