[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_nuclia_tool.metadata]
type = "tool"

[project]
name = "sam_nuclia_tool"
version = "0.1.3"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "A plugin for connecting to RAG and retrieving relevant documents from Nuclia"
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.10.16,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "nuclia==4.9.17",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-json-ctrf>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/SolaceLabs/solace-agent-mesh"
Documentation = "https://solacelabs.github.io/solace-agent-mesh/"
Repository = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins"
Issues = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_nuclia_tool"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "sam_nuclia_tool/config.yaml"
"README.md" = "sam_nuclia_tool/README.md"
"pyproject.toml" = "sam_nuclia_tool/pyproject.toml"

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "pytest-json-ctrf>=0.1.0",
]
