[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_powerbi.metadata]
type = "tool"

[project]
name = "sam_powerbi"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "A PowerBI plugin for executing queries with MSAL device-code delegated auth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msal>=1.34",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_powerbi"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_powerbi" = "sam_powerbi/"
"config.yaml" = "sam_powerbi/config.yaml"
"README.md" = "sam_powerbi/README.md"
"pyproject.toml" = "sam_powerbi/pyproject.toml"
